--- a/models_on_sample_data.ipynb
+++ b/models_on_sample_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,20 +50,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [2/10], Loss: 0.1432\n",
-      "Epoch [4/10], Loss: 0.0649\n",
-      "Epoch [6/10], Loss: 0.0336\n",
-      "Epoch [8/10], Loss: 0.0240\n",
-      "Epoch [10/10], Loss: 0.0207\n",
-      "Test Loss: 0.0213\n"
+      "Epoch [2/10], Loss: 0.0562\n",
+      "Epoch [4/10], Loss: 0.0375\n",
+      "Epoch [6/10], Loss: 0.0271\n",
+      "Epoch [8/10], Loss: 0.0211\n",
+      "Epoch [10/10], Loss: 0.0179\n",
+      "Test Loss: 0.0242\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.024192270158891915"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define a simple neural network model\n",
+    "from model_service import LinRegNN\n",
+    "\n",
+    "# Initialize the model\n",
+    "input_size = data_processor.seq_length\n",
+    "hidden_size = 10\n",
+    "output_size = data_processor.pred_window\n",
+    "model = LinRegNN(input_size, output_size)\n",
+    "\n",
+    "\n",
+    "# Define loss function and optimizer\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "# Training loop\n",
+    "x_train_rs,x_test_rs= model.reshape_input(x_train),model.reshape_input(x_test)\n",
+    "epochs = 10\n",
+    "model.train_loop(model, criterion, optimizer, x_train_rs, y_train, epochs)\n",
+    "# Eval\n",
+    "model.evaluation(model, x_test_rs, y_test, criterion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [2/10], Loss: 0.0769\n",
+      "Epoch [4/10], Loss: 0.0426\n",
+      "Epoch [6/10], Loss: 0.0272\n",
+      "Epoch [8/10], Loss: 0.0181\n",
+      "Epoch [10/10], Loss: 0.0134\n",
+      "Test Loss: 0.0863\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0863194945268333"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -86,25 +147,35 @@
     "epochs = 10\n",
     "model.train_loop(model, criterion, optimizer, x_train_rs, y_train, epochs)\n",
     "# Eval\n",
-    "model.evaluation(model, x_test_rs, y_test, criterion)\n"
+    "model.evaluation(model, x_test_rs, y_test, criterion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [2/10], Loss: 0.1840\n",
-      "Epoch [4/10], Loss: 0.1281\n",
-      "Epoch [6/10], Loss: 0.0609\n",
-      "Epoch [8/10], Loss: 0.0172\n",
-      "Epoch [10/10], Loss: 0.0144\n",
-      "Test Loss: 0.1298\n"
+      "Epoch [2/10], Loss: 0.1139\n",
+      "Epoch [4/10], Loss: 0.0889\n",
+      "Epoch [6/10], Loss: 0.0432\n",
+      "Epoch [8/10], Loss: 0.0135\n",
+      "Epoch [10/10], Loss: 0.0128\n",
+      "Test Loss: 0.0818\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.08175632753409445"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -127,7 +198,7 @@
     "epochs = 10\n",
     "model.train_loop(model, criterion, optimizer, x_train_rs, y_train, epochs)\n",
     "# Eval\n",
-    "model.evaluation(model, x_test_rs, y_test, criterion)\n"
+    "model.evaluation(model, x_test_rs, y_test, criterion)"
    ]
   },
   {
