--- a/models_on_sample_data.ipynb
+++ b/models_on_sample_data.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from data_processing_service import DataProcessingService\n",
+    "from backend.data_processing_service import DataProcessingService\n",
     "\n",
     "# Initialize DataProcessingService\n",
     "data_processor = DataProcessingService(seq_length=10, pred_window=1, batch_size=10)\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -50,35 +50,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [2/10], Loss: 0.0562\n",
-      "Epoch [4/10], Loss: 0.0375\n",
-      "Epoch [6/10], Loss: 0.0271\n",
-      "Epoch [8/10], Loss: 0.0211\n",
-      "Epoch [10/10], Loss: 0.0179\n",
-      "Test Loss: 0.0242\n"
+      "Epoch [2/10], Loss: 0.2696\n",
+      "Epoch [4/10], Loss: 0.1573\n",
+      "Epoch [6/10], Loss: 0.0946\n",
+      "Epoch [8/10], Loss: 0.0620\n",
+      "Epoch [10/10], Loss: 0.0445\n",
+      "Test Loss: 0.1465\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.024192270158891915"
+       "0.1465165582485497"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Define a simple neural network model\n",
-    "from model_service import LinRegNN\n",
+    "from backend.model_service import LinRegNN\n",
     "\n",
     "# Initialize the model\n",
     "input_size = data_processor.seq_length\n",
@@ -101,35 +100,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [2/10], Loss: 0.0769\n",
-      "Epoch [4/10], Loss: 0.0426\n",
-      "Epoch [6/10], Loss: 0.0272\n",
-      "Epoch [8/10], Loss: 0.0181\n",
-      "Epoch [10/10], Loss: 0.0134\n",
-      "Test Loss: 0.0863\n"
+      "Epoch [2/10], Loss: 0.0446\n",
+      "Epoch [4/10], Loss: 0.0203\n",
+      "Epoch [6/10], Loss: 0.0133\n",
+      "Epoch [8/10], Loss: 0.0115\n",
+      "Epoch [10/10], Loss: 0.0108\n",
+      "Test Loss: 0.0334\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.0863194945268333"
+       "0.03339563889312558"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Define a simple neural network model\n",
-    "from model_service import SimpleNN\n",
+    "from backend.model_service import SimpleNN\n",
     "\n",
     "# Initialize the model\n",
     "input_size = data_processor.seq_length\n",
@@ -152,37 +150,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [2/10], Loss: 0.1139\n",
-      "Epoch [4/10], Loss: 0.0889\n",
-      "Epoch [6/10], Loss: 0.0432\n",
-      "Epoch [8/10], Loss: 0.0135\n",
-      "Epoch [10/10], Loss: 0.0128\n",
-      "Test Loss: 0.0818\n"
+      "Epoch [2/10], Loss: 0.1837\n",
+      "Epoch [4/10], Loss: 0.1277\n",
+      "Epoch [6/10], Loss: 0.0745\n",
+      "Epoch [8/10], Loss: 0.0184\n",
+      "Epoch [10/10], Loss: 0.0133\n",
+      "Test Loss: 0.0838\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.08175632753409445"
+       "0.08381811203435063"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from model_service import SimpleLSTM\n",
+    "from backend.model_service import SimpleLSTM\n",
     "\n",
     "input_size = 1\n",
     "hidden_size = 10\n",
