--- a/models_on_sample_data.ipynb
+++ b/models_on_sample_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,28 +50,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [2/10], Loss: 0.2696\n",
-      "Epoch [4/10], Loss: 0.1573\n",
-      "Epoch [6/10], Loss: 0.0946\n",
-      "Epoch [8/10], Loss: 0.0620\n",
-      "Epoch [10/10], Loss: 0.0445\n",
-      "Test Loss: 0.1465\n"
+      "Epoch [1/10], Loss: 0.1316\n",
+      "Epoch [2/10], Loss: 0.0833\n",
+      "Epoch [3/10], Loss: 0.0518\n",
+      "Epoch [4/10], Loss: 0.0324\n",
+      "Epoch [5/10], Loss: 0.0219\n",
+      "Checkpoint saved at epoch 5\n",
+      "Epoch [6/10], Loss: 0.0166\n",
+      "Epoch [7/10], Loss: 0.0142\n",
+      "Epoch [8/10], Loss: 0.0131\n",
+      "Epoch [9/10], Loss: 0.0126\n",
+      "Epoch [10/10], Loss: 0.0123\n",
+      "Checkpoint saved at epoch 10\n",
+      "Test Loss: 0.0155\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.1465165582485497"
+       "0.01554646158547257"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +88,6 @@
     "\n",
     "# Initialize the model\n",
     "input_size = data_processor.seq_length\n",
-    "hidden_size = 10\n",
     "output_size = data_processor.pred_window\n",
     "model = LinRegNN(input_size, output_size)\n",
     "\n",
@@ -93,7 +99,7 @@
     "# Training loop\n",
     "x_train_rs,x_test_rs= model.reshape_input(x_train),model.reshape_input(x_test)\n",
     "epochs = 10\n",
-    "model.train_loop(model, criterion, optimizer, x_train_rs, y_train, epochs)\n",
+    "model.train_loop(model, criterion, optimizer, x_train_rs, y_train, epochs,  directory = \"backend/models/lr01_\")\n",
     "# Eval\n",
     "model.evaluation(model, x_test_rs, y_test, criterion)"
    ]
