Add load save models methods, aapl data

--- a/models_on_sample_data.ipynb
+++ b/models_on_sample_data.ipynb
@@ -99,7 +99,7 @@
     "# Training loop\n",
     "x_train_rs,x_test_rs= model.reshape_input(x_train),model.reshape_input(x_test)\n",
     "epochs = 10\n",
-    "model.train_loop(model, criterion, optimizer, x_train_rs, y_train, epochs,  directory = \"backend/models/lr01_\")\n",
+    "model.train_loop(model, criterion, optimizer, x_train_rs, y_train, epochs,  directory = \"backend/checkpoints/lr01_\")\n",
     "# Eval\n",
     "model.evaluation(model, x_test_rs, y_test, criterion)"
    ]
