Minor fixes in ModelService and in the template

--- a/models_template.ipynb
+++ b/models_template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from backend.model_service import LinRegNN"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -59,25 +68,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10], Loss: 0.4989\n",
-      "Epoch [2/10], Loss: 0.2577\n",
-      "Epoch [3/10], Loss: 0.1651\n",
-      "Epoch [4/10], Loss: 0.1311\n",
-      "Epoch [5/10], Loss: 0.1121\n",
+      "Epoch [1/10], Loss: 0.1760\n",
+      "Epoch [2/10], Loss: 0.1008\n",
+      "Epoch [3/10], Loss: 0.0839\n",
+      "Epoch [4/10], Loss: 0.0741\n",
+      "Epoch [5/10], Loss: 0.0655\n",
       "Checkpoint saved at epoch 5\n",
-      "Epoch [6/10], Loss: 0.0971\n",
-      "Epoch [7/10], Loss: 0.0842\n",
-      "Epoch [8/10], Loss: 0.0730\n",
-      "Epoch [9/10], Loss: 0.0634\n",
-      "Epoch [10/10], Loss: 0.0552\n",
+      "Epoch [6/10], Loss: 0.0581\n",
+      "Epoch [7/10], Loss: 0.0518\n",
+      "Epoch [8/10], Loss: 0.0467\n",
+      "Epoch [9/10], Loss: 0.0425\n",
+      "Epoch [10/10], Loss: 0.0392\n",
       "Checkpoint saved at epoch 10\n",
-      "Test Loss: 0.0176\n"
+      "Test Loss: 0.0181\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.017637882589462188"
+       "0.018084477803628173"
       ]
      },
      "execution_count": 4,
@@ -86,8 +95,6 @@
     }
    ],
    "source": [
-    "from backend.model_service import LinRegNN\n",
-    "\n",
     "# Initialize the model\n",
     "input_size = data_processor.seq_length\n",
     "output_size = data_processor.pred_window\n",
@@ -104,6 +111,42 @@
     "model.train_loop(model, criterion, optimizer, x_train_rs, y_train, epochs, directory = \"backend/checkpoints/lr01_\")\n",
     "# Eval\n",
     "model.evaluation(model, x_test_rs, y_test, criterion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entire model saved successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.register(model, name=\"template_test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entire model loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from backend.model_service import ModelService\n",
+    "model_service = ModelService()\n",
+    "loaded_model = model_service.load_registered_model(\"backend/models/template_test\")"
    ]
   },
   {
