Patch noise with real data

--- a/model_aapl_gan.ipynb
+++ b/model_aapl_gan.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +132,7 @@
     "                real_data = x_train[i]\n",
     "                real_labels = y_train[i].unsqueeze(1)\n",
     "\n",
+    "                noise = real_data.t()\n",
     "                # Train Discriminator\n",
     "                self.optimizer_d.zero_grad()\n",
     "                \n",
@@ -140,7 +141,7 @@
     "                real_loss = self.criterion(real_output, real_labels.squeeze(0))\n",
     "                \n",
     "                # Fake data\n",
-    "                noise = torch.randn(1, self.gen_input_dim)\n",
+    "                # noise = torch.randn(1, self.gen_input_dim)\n",
     "                fake_data = self.generator(noise)\n",
     "                fake_labels = torch.zeros(1, 1)  # Fake labels are 0\n",
     "                fake_output = self.discriminator(fake_data)\n",
@@ -154,7 +155,7 @@
     "                # Train Generator\n",
     "                self.optimizer_g.zero_grad()\n",
     "                \n",
-    "                noise = torch.randn(1, self.gen_input_dim)\n",
+    "                # noise = torch.randn(1, self.gen_input_dim)\n",
     "                fake_data = self.generator(noise)\n",
     "                fake_output = self.discriminator(fake_data)\n",
     "                g_loss = self.criterion(fake_output, real_labels)\n",
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -182,16 +183,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10]  Loss D: 0.5972247123718262, Loss G: 0.1938854455947876\n",
-      "Epoch [2/10]  Loss D: 0.388442724943161, Loss G: 0.06010378897190094\n",
-      "Epoch [3/10]  Loss D: 0.31770098209381104, Loss G: 0.01388280838727951\n",
-      "Epoch [4/10]  Loss D: 0.2915491759777069, Loss G: 0.008138542994856834\n",
-      "Epoch [5/10]  Loss D: 0.2804330587387085, Loss G: 0.008363691158592701\n",
-      "Epoch [6/10]  Loss D: 0.27364087104797363, Loss G: 0.007428688928484917\n",
-      "Epoch [7/10]  Loss D: 0.2699657678604126, Loss G: 0.0072815450839698315\n",
-      "Epoch [8/10]  Loss D: 0.26761341094970703, Loss G: 0.0073517244309186935\n",
-      "Epoch [9/10]  Loss D: 0.2665179371833801, Loss G: 0.007844784297049046\n",
-      "Epoch [10/10]  Loss D: 0.2646543085575104, Loss G: 0.007210987154394388\n"
+      "Epoch [1/10]  Loss D: 0.4205183982849121, Loss G: 0.22290702164173126\n",
+      "Epoch [2/10]  Loss D: 0.15232141315937042, Loss G: 0.03129754215478897\n",
+      "Epoch [3/10]  Loss D: 0.0774698406457901, Loss G: 0.012773692607879639\n",
+      "Epoch [4/10]  Loss D: 0.04704451188445091, Loss G: 0.009640452452003956\n",
+      "Epoch [5/10]  Loss D: 0.031687673181295395, Loss G: 0.008547845296561718\n",
+      "Epoch [6/10]  Loss D: 0.02274084836244583, Loss G: 0.008011503145098686\n",
+      "Epoch [7/10]  Loss D: 0.017758162692189217, Loss G: 0.007759559899568558\n",
+      "Epoch [8/10]  Loss D: 0.014956362545490265, Loss G: 0.0076571376994252205\n",
+      "Epoch [9/10]  Loss D: 0.013363776728510857, Loss G: 0.007603437174111605\n",
+      "Epoch [10/10]  Loss D: 0.012574374675750732, Loss G: 0.0075658755376935005\n"
      ]
     }
    ],
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
        " tensor([[-0.0580]]))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,126 +249,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.0586]], grad_fn=<SigmoidBackward0>),\n",
+       " tensor([[0.0586]], grad_fn=<SigmoidBackward0>))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. Pass test data through discriminator (optional)\n",
     "test_predictions = gan.discriminator(x_test[-3].t())\n",
     "\n",
     "# 3. Evaluate generated data using discriminator (optional)\n",
-    "generated_predictions = gan.discriminator(x_test[-3].t())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[0.0991]], grad_fn=<SigmoidBackward0>),\n",
-       " tensor([[0.0991]], grad_fn=<SigmoidBackward0>))"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "generated_predictions = gan.discriminator(x_test[-3].t())\n",
     "test_predictions, generated_predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1/10], Loss: 0.1760\n",
-      "Epoch [2/10], Loss: 0.1008\n",
-      "Epoch [3/10], Loss: 0.0839\n",
-      "Epoch [4/10], Loss: 0.0741\n",
-      "Epoch [5/10], Loss: 0.0655\n",
-      "Checkpoint saved at epoch 5\n",
-      "Epoch [6/10], Loss: 0.0581\n",
-      "Epoch [7/10], Loss: 0.0518\n",
-      "Epoch [8/10], Loss: 0.0467\n",
-      "Epoch [9/10], Loss: 0.0425\n",
-      "Epoch [10/10], Loss: 0.0392\n",
-      "Checkpoint saved at epoch 10\n",
-      "Test Loss: 0.0181\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.018084477803628173"
+       "(tensor([[-0.0713],\n",
+       "         [-0.0696],\n",
+       "         [-0.0396],\n",
+       "         [-0.0436],\n",
+       "         [ 0.0216],\n",
+       "         [ 0.0265],\n",
+       "         [-0.0417],\n",
+       "         [-0.0789],\n",
+       "         [-0.0580],\n",
+       "         [ 0.2306]]),\n",
+       " tensor([[0.3360]]))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Initialize the model\n",
-    "input_size = data_processor.seq_length\n",
-    "output_size = data_processor.pred_window\n",
-    "model = LinRegNN(input_size, output_size)\n",
-    "\n",
-    "\n",
-    "# Define loss function and optimizer\n",
-    "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-    "\n",
-    "# Training loop\n",
-    "x_train_rs,x_test_rs= model.reshape_input(x_train),model.reshape_input(x_test)\n",
-    "epochs = 10\n",
-    "model.train_loop(model, criterion, optimizer, x_train_rs, y_train, epochs, directory = \"backend/checkpoints/lr01_\")\n",
-    "# Eval\n",
-    "model.evaluation(model, x_test_rs, y_test, criterion)"
+    "a = 1\n",
+    "x_test[-a], y_test[-a]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Entire model saved successfully.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(tensor([[0.0744]], grad_fn=<SigmoidBackward0>),\n",
+       " tensor([[0.0744]], grad_fn=<SigmoidBackward0>))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.register(model, name=\"template_test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Entire model loaded successfully.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from backend.model_service import ModelService\n",
-    "model_service = ModelService()\n",
-    "loaded_model = model_service.load_registered_model(\"backend/models/template_test\")"
+    "# 2. Pass test data through discriminator (optional)\n",
+    "test_predictions = gan.discriminator(x_test[-a].t())\n",
+    "\n",
+    "# 3. Evaluate generated data using discriminator (optional)\n",
+    "generated_predictions = gan.discriminator(x_test[-a].t())\n",
+    "test_predictions, generated_predictions"
    ]
   },
   {
