Add hyperop to model service and corresponding test

--- a/models_template.ipynb
+++ b/models_template.ipynb
@@ -11,6 +11,7 @@
     "import torch.optim as optim\n",
     "import numpy as np\n",
     "from backend.data_processing_service import DataProcessingService\n",
+    "from backend.model_service import ModelService, LinRegNN\n",
     "\n",
     "# Initialize DataProcessingService\n",
     "data_processor = DataProcessingService(seq_length=10, pred_window=1, batch_size=10)\n",
@@ -52,70 +53,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from backend.model_service import LinRegNN"
+    "# Define the search space for hyperparameters\n",
+    "model_params_space = {\n",
+    "    'input_size': data_processor.seq_length,\n",
+    "    'output_size': data_processor.pred_window\n",
+    "}\n",
+    "\n",
+    "# Run hyperparameter optimization\n",
+    "best_hyperparams = ModelService.hyperparameter_optimization(LinRegNN, x_train, y_train, x_test, y_test, model_params_space, max_evals=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'epochs': 9.0, 'learning_rate': 0.010055235826599312}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract best hyperparameters\n",
+    "# best_hidden_size = best_hyperparams['model_params']['hidden_size']\n",
+    "best_learning_rate = best_hyperparams['learning_rate']\n",
+    "best_epochs = best_hyperparams['epochs']\n",
+    "best_hyperparams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the model with best hyperparameters\n",
+    "model = LinRegNN(data_processor.seq_length, data_processor.pred_window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10], Loss: 0.1760\n",
-      "Epoch [2/10], Loss: 0.1008\n",
+      "Epoch [1/10], Loss: 0.1209\n",
+      "Epoch [2/10], Loss: 0.1011\n",
       "Epoch [3/10], Loss: 0.0839\n",
-      "Epoch [4/10], Loss: 0.0741\n",
-      "Epoch [5/10], Loss: 0.0655\n",
-      "Checkpoint saved at epoch 5\n",
-      "Epoch [6/10], Loss: 0.0581\n",
-      "Epoch [7/10], Loss: 0.0518\n",
-      "Epoch [8/10], Loss: 0.0467\n",
-      "Epoch [9/10], Loss: 0.0425\n",
-      "Epoch [10/10], Loss: 0.0392\n",
-      "Checkpoint saved at epoch 10\n",
-      "Test Loss: 0.0181\n"
+      "Epoch [4/10], Loss: 0.0697\n",
+      "Epoch [5/10], Loss: 0.0582\n",
+      "Checkpoint saved. Epoch 5\n",
+      "Checkpoint saved at backend/checkpoints/lr01_5.pth\n",
+      "Epoch [6/10], Loss: 0.0492\n",
+      "Epoch [7/10], Loss: 0.0421\n",
+      "Epoch [8/10], Loss: 0.0367\n",
+      "Epoch [9/10], Loss: 0.0325\n",
+      "Epoch [10/10], Loss: 0.0294\n",
+      "Checkpoint saved. Epoch 10\n",
+      "Checkpoint saved at backend/checkpoints/lr01_10.pth\n",
+      "Test Loss: 0.0158\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.018084477803628173"
+       "0.015752632259774985"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Initialize the model\n",
-    "input_size = data_processor.seq_length\n",
-    "output_size = data_processor.pred_window\n",
-    "model = LinRegNN(input_size, output_size)\n",
-    "\n",
-    "\n",
     "# Define loss function and optimizer\n",
     "criterion = nn.MSELoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "# Training loop\n",
-    "x_train_rs,x_test_rs= model.reshape_input(x_train),model.reshape_input(x_test)\n",
+    "# x_train_rs,x_test_rs= model.reshape_input(x_train),model.reshape_input(x_test)\n",
     "epochs = 10\n",
-    "model.train_loop(model, criterion, optimizer, x_train_rs, y_train, epochs, directory = \"backend/checkpoints/lr01_\")\n",
+    "model.train_loop(model, criterion, optimizer, x_train, y_train, epochs, directory = \"backend/checkpoints/lr01_\")\n",
     "# Eval\n",
-    "model.evaluation(model, x_test_rs, y_test, criterion)"
+    "model.evaluation(model, x_test, y_test, criterion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
