--- a/dev_decomposition.ipynb
+++ b/dev_decomposition.ipynb
@@ -2,6 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train shape: (2, 72, 36, 4)\n",
+      "y_train shape: (2, 72, 12, 4)\n",
+      "x_test shape: (2, 19, 36, 4)\n",
+      "y_test shape: (2, 19, 12, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from backend.data_processing_service import DataProcessingService\n",
+    "from backend.model_service import ModelService, LinRegNN\n",
+    "\n",
+    "# CONFIG\n",
+    "log_wandb = False\n",
+    "\n",
+    "# Initialize DataProcessingService with has_date_index flag\n",
+    "data_processor = DataProcessingService(seq_length=36, pred_window=12, batch_size=6, has_date_index=True)\n",
+    "\n",
+    "# Example data\n",
+    "data_1 = np.loadtxt('data/normalized_apple_prices.csv')\n",
+    "data_2 = data_processor.get_sample_data(length=len(data_1))\n",
+    "\n",
+    "# Create date index for one of the series\n",
+    "start_date = '2020-01-01'\n",
+    "end_date = '2020-05-17'\n",
+    "date_index = pd.date_range(start=start_date, end=end_date, freq='D')[:len(data_2)]\n",
+    "data_series = pd.Series(data_1, index=date_index)\n",
+    "data_series_2 = pd.Series(data_2, index=date_index)\n",
+    "\n",
+    "# Assuming we have multiple time series, mix of numpy arrays and pandas series\n",
+    "time_series_list = [data_1, data_series_2]\n",
+    "\n",
+    "# Process multiple time series\n",
+    "processed_data = data_processor.process_multiple_series(time_series_list)\n",
+    "\n",
+    "# Create sequences for each time series\n",
+    "x_data_list, y_data_list = [], []\n",
+    "for data in processed_data:\n",
+    "    x_data, y_data = data_processor.create_sequences(data)\n",
+    "    x_data_list.append(x_data)\n",
+    "    y_data_list.append(y_data)\n",
+    "\n",
+    "# Stack sequences from all time series\n",
+    "x_data_combined = np.stack(x_data_list, axis=0)\n",
+    "y_data_combined = np.stack(y_data_list, axis=0)\n",
+    "\n",
+    "# Split data into training and test sets\n",
+    "x_train, x_test, y_train, y_test = [], [], [], []\n",
+    "for i in range(x_data_combined.shape[0]):\n",
+    "    x_tr, x_te, y_tr, y_te = data_processor.split_data(x_data_combined[i], y_data_combined[i], train_ratio=0.8)\n",
+    "    x_train.append(x_tr)\n",
+    "    x_test.append(x_te)\n",
+    "    y_train.append(y_tr)\n",
+    "    y_test.append(y_te)\n",
+    "\n",
+    "# Convert lists to numpy arrays\n",
+    "x_train = np.array(x_train)\n",
+    "x_test = np.array(x_test)\n",
+    "y_train = np.array(y_train)\n",
+    "y_test = np.array(y_test)\n",
+    "\n",
+    "# Print shapes to verify\n",
+    "print(\"x_train shape:\", x_train.shape)  # Should be (2, 42, 36, 4) if 80% split from 53\n",
+    "print(\"y_train shape:\", y_train.shape)  # Should be (2, 42, 12, 4)\n",
+    "print(\"x_test shape:\", x_test.shape)    # Should be (2, 11, 36, 4) if 20% split from 53\n",
+    "print(\"y_test shape:\", y_test.shape)    # Should be (2, 11, 12, 4)\n",
+    "\n",
+    "# Convert data to PyTorch tensors\n",
+    "x_train = torch.tensor(x_train, dtype=torch.float32)\n",
+    "y_train = torch.tensor(y_train, dtype=torch.float32)\n",
+    "x_test = torch.tensor(x_test, dtype=torch.float32)\n",
+    "y_test = torch.tensor(y_test, dtype=torch.float32)\n",
+    "\n",
+    "ms = ModelService()\n",
+    "\n",
+    "# Proceed with model training...\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([72, 36, 4])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -20,7 +131,7 @@
     "# Initialize DataProcessingService\n",
     "data_processor = DataProcessingService(seq_length=36, pred_window=12, batch_size=6)\n",
     "data = np.loadtxt('data/normalized_apple_prices.csv')\n",
-    "# data = data_processor.get_sample_data(length=50)\n",
+    "data_2 = data_processor.get_sample_data(length=len(data))\n",
     "\n",
     "# Normalize the data\n",
     "data_normalized, scaler = data_processor.normalize_data(data)\n"
